03-Jul-2015 Laurent Duflot
	* add baseline mc15 xAOD sample lists
	* makeDatasetList.py: add option --whichMC15 to automatically loop over the various
	r-tags for each mc15 week1/50ns/25ns production.
	* BuildSUSYObjects: have different tool names for CRY and others, move IsSignalJet and isBJet
	tests after overlap removal

01-Jul-2015 Laurent Duflot
	* ZeroLeptonRunPeriod.h, JobBookeeping.cxx: add derivation tags p2372, p2375 and p2377

30-Jun-2015 Laurent Duflot
	* mc15_13TeV_MCSampleList.py, mc15_13TeV_week1_MCSampleList.py: update list of baseline samples
	* ZeroLeptonCRxx: fill tau variables

29-Jun-2015 Laurent Duflot
	* mc15_13TeV_MCSampleList.py: update list of baseline samples, still a few missing "core" samples

28-Jun-2015 Laurent Duflot
	* BuildSUSYObjects: comment destructor due to crash in SUSYObjDef_xAOD
	destructor
	* update to SUSYTools-00-06-13: no change in ttbar cutflow
	* tagged as ZeroLeptonRun2-00-00-41

26-Jun-2015 Laurent Duflot
	* update to SUSYTools-00-06-12: ~10% more signal leptons in CRWT
	* BuildSUSYObjects, PhysObjProxyFiller: adapt to SUSYTools changes
	* there are no compatible DC14 SUSYTools tag
	* tagged as ZeroLeptonRun2-00-00-40

25-Jun-2015 Laurent Duflot
	* ZeroLeptonCRWT, ZeroLeptonCRZ, ZeroLeptonCRY: add RJigsaw block
	* BuildSUSYObjects: update list of triggers
	* update to SUSYTools-00-06-10
	* tagged as ZeroLeptonRun2-00-00-39

25-Jun-2015 Laurent Duflot
	* ZeroLeptonCRWT, ZeroLeptonCRZ: for Run 2 data, set both
	isMuonChannel and isElectronChannel to true since trigger cannot
	be decided from stream

24-Jun-2015 Laurent Duflot
	* BuildSUSYObjects: fix jet btagging bug (cut value was for a previous
	tagger)
	* PhysObjProxyUtils.cxx: fill jetBTag variable with the MV2c20
	discriminant value

23-Jun-2015 Laurent Duflot
	* README: update file for example command
	* launch_jobs_on_grid.py: include Ext_RestFrames tarball

22-Jun-2015 Laurent Duflot
	* ZeroLeptonNtVars, PhysObjProxyUtils, SR and CR: add lumi block number,