@@ -205,7 +205,12 @@ class NTCRYVars
   std::vector<bool> phSignal;
   std::vector<float> phTopoetcone20;
   std::vector<float> phPtvarcone20;
-
+  std::vector<float> phGLTopoetcone20;
+  std::vector<float> phGLPtvarcone20;
+  std::vector<float> phGTopoetcone20;
+  std::vector<float> phGPtvarcone20;
+  std::vector<bool> phLoose;
+  std::vector<bool> phTight;
 };
 
 class NTCRYVarsRead 
@@ -222,6 +227,12 @@ private:
   std::vector< bool >*  p_phSignal;
   std::vector< float >* p_phTopoetcone20;
   std::vector< float >* p_phPtvarcone20;
+  std::vector< float >* p_phGLTopoetcone20;
+  std::vector< float >* p_phGLPtvarcone20;
+  std::vector< float >* p_phGTopoetcone20;
+  std::vector< float >* p_phGPtvarcone20;
+  std::vector< bool >*  p_phLoose;
+  std::vector< bool >*  p_phTight;
 };
 
 class NTPdfVars {
